Enhance deployment step with completion message
Added a completion message to the deployment step.

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,3 +30,4 @@ jobs:
         - name: Deploy to production
             if: success()
             run: echo "Deploying to production..."
+            run: echo "COMPLETED"
