--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,18 +11,16 @@ jobs:
     
         steps:
         - name: Checkout code
-          uses: actions/checkout@v3
+          uses: actions/checkout@v4
     
-        - name: Set up Node.js
-          uses: actions/setup-node@v3
-          with:
-            node-version: '16'
-    
-        - name: Install dependencies
-          run: npm install
-    
-        - name: Run tests
-          run: npm test
-    
-        - name: Build project
-          run: npm run build
+        - name: Build Image
+          run: docker build -t my-app-image .
+
+        - name: Tag Image
+          run: docker tag my-app-image nabinpurbey03/my-app-image:latest
+
+        - name: Log in to Docker Hub
+          run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+        - name: Push Image to Docker Hub
+          run: docker push nabinpurbey03/my-app-image:latest
