--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,7 +20,7 @@ jobs:
           run: docker tag my-app-image nabinpurbey03/my-app-image:latest
 
         - name: Log in to Docker Hub
-          run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          run: docker login -u "${{ vars.DOCKER_USERNAME }}" -p "${{ secrtes.DOCKER_PASSWORD }}"
 
         - name: Push Image to Docker Hub
           run: docker push nabinpurbey03/my-app-image:latest
