--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,26 +1,26 @@
 name: CICD Pipeline
-
 on:
   push:
     branches: ["main"]
-
-
 jobs:
-    build:
-        runs-on: ubuntu-latest
-    
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
-    
-        - name: Build Image
-          run: docker build -t my-app-image .
+  build:
+    runs-on: ubuntu-latest
 
-        - name: Tag Image
-          run: docker tag my-app-image nabinpurbey03/my-app-image:latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-        - name: Log in to Docker Hub
-          run: docker login -u "${{ vars.DOCKER_USERNAME }}" -p "${{ secrtes.DOCKER_PASSWORD }}"
+      - name: Build Image
+        run: docker build -t my-app-image .
+      
+      - name: Tag Image
+        run: docker tag my-app-image nabinpurbey03/my-app-image:latest
 
-        - name: Push Image to Docker Hub
-          run: docker push nabinpurbey03/my-app-image:latest
+      - name: Print Username
+        run: "${{ vars.DOCKER_USERNAME }}"
+      
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      
+      - name: Push Image to Docker Hub
+        run: docker push nabinpurbey03/my-app-image:latest
