Fix Docker username variable usage in CI/CD workflow

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,10 +17,10 @@ jobs:
         run: docker tag my-app-image nabinpurbey03/my-app-image:latest
 
       - name: Print Username
-        run: "${{ vars.DOCKER_USERNAME }}"
+        run: echo "${{ vars.DOCKER_USERNAME }}"
       
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
       
       - name: Push Image to Docker Hub
         run: docker push nabinpurbey03/my-app-image:latest
